--- a/style.css
+++ b/style.css
@@ -1,26 +1,98 @@
 #canvas {
-    background: green;
     display: block;
+}
+ul,ol {
+    list-style: none;
+}
+
+*{
+    margin: 0;
+    padding: 0;
+}
+
+.icon {
+    width: 1em;
+    height: 1em;
+    vertical-align: -0.15em;
+    fill: currentColor;
+    overflow: hidden;
 }
 
 body {
     margin: 0px;
+    overflow: hidden;
 }
 
 .actions {
     position: fixed;
-    bottom: 0px;
-    left: 0px;
+    top: 3%;
+    left: 10px;
 }
 
-.actions > #brush {
-    display: none;
+.actions > svg {
+    width: 1.5em;
+    height:1.5em;
+    transition: all 0.2s;
+    display: block;
+    margin: 10px 0;
 }
 
-.actions.x > #brush {
-    display: inline-block;
+.actions svg.active {
+    fill: red;
+    transform: scale(1.2);
 }
 
-.actions.x > #eraser {
-    display: none;
+.colors {
+    position: fixed;
+    top: 25%;
+    left: 12px;
+}
+
+.colors > li {
+    width: 20px;
+    height: 20px;
+    box-shadow: 0 0 3px rgba(0,0,0,0.5);
+    margin: 10px 0;
+    border-radius: 50%;
+    transition: all 0.3s;
+}
+
+ol > li.red{
+    background: red;
+}
+ol > li.green{
+    background: green;
+}
+ol > li.blue{
+    background: blue;
+}
+
+ol > li.black{
+    background: black;
+}
+
+ol > li.active {
+    box-shadow: 0 0 3px rgba(0,0,0,0.5);
+    transform: scale(1.2);
+}
+
+.sizes {
+    position: fixed;
+    top: 50%;
+    left: 8px;
+}
+.sizes > li {
+    margin: 15px 0;
+}
+
+.sizes > .thick {
+    height: 0;
+    width: 30px;
+    border-top: 6px solid black;
+}
+
+.sizes > .thin {
+    height: 0;
+    width: 30px;
+    border-top: 3px solid black;
 }
