--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .actions {
     position: fixed;
-    top: 3%;
+    top: 25px;
     left: 10px;
 }
 
@@ -44,7 +44,7 @@ body {
 
 .colors {
     position: fixed;
-    top: 25%;
+    top: 180px;
     left: 12px;
 }
 
@@ -78,21 +78,27 @@ ol > li.active {
 
 .sizes {
     position: fixed;
-    top: 50%;
-    left: 8px;
+    top: 315px;
+    left: 10px;
 }
 .sizes > li {
     margin: 15px 0;
 }
 
 .sizes > .thick {
-    height: 0;
+    height: 6px;
     width: 30px;
-    border-top: 6px solid black;
+    background: black;
+    border: 1px  transparent;
 }
 
 .sizes > .thin {
-    height: 0;
+    height: 3px;
     width: 30px;
-    border-top: 3px solid black;
+    background: black;
+    border: 1px  transparent;
+}
+
+.sizes > li.active {
+    border: 1px solid lightblue;
 }
